# rsomics-plink-test-missing

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: bed.rs  fisher.rs  fmt.rs  lib.rs  main.rs  pheno.rs  testmissing.rs
tests/: compat.rs
tests/golden/: small.bed  small.bim  small.fam  small.missing
