[package]
name = "rsomics-plink-test-missing"
version = "0.1.1"
description = "Differential genotype-missingness test between cases and controls (plink --test-missing)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-plink-test-missing"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-plink-test-missing"
path = "src/main.rs"

[lib]
name = "rsomics_plink_test_missing"
path = "src/lib.rs"
doctest = false

[[bench]]
name = "bench"
harness = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
